# learning_public

./: .cursorrules  AGENTS.md  FONT_SETTING_GUIDE.md  INSTALL_GUIDE.md  README.md  VSCODE_EXTENSIONS.md  package-lock.json  package.json  todo.md  ソース概要.md  ドキュメント概要.md  問題点記録書.md  設計概要.md
IoT/: 007_本番1台目_実行順チェックリスト.md  APメンテナンス画面仕様書.md  DB仕様書.md  DEV-001問題点クイックリファレンス.md  IF仕様書.md  LocalServer秘密処理別層仕様書.md  LocalServer管理画面仕様書.md  MQTT_TLS環境構築まとめ.md  MQTTコマンド仕様書.md  (+57 more)
IoT/ProductionTool/: Cargo.toml  README.md  readme.txt
IoT/ProductionTool/assets/: README.md
IoT/ProductionTool/config/: README.md  productionTool.settings.example.json  productionTool.settings.installed.example.json
IoT/ProductionTool/installer/: ProductionTool.iss
IoT/ProductionTool/logs/: README.md
IoT/ProductionTool/scripts/: README.md  build-production-tool-installer.ps1  install-production-tool.ps1  uninstall-production-tool.ps1
IoT/ProductionTool/src/: README.md  app_config.rs  audit_logger.rs  auth_screen_state.rs  device_select_screen_state.rs  dry_run_screen_state.rs  irreversible_command_runner.rs  irreversible_stage_plan.rs  main.rs  pc004_check_state.rs  production_workflow_handoff.rs  startup_screen_state.rs
IoT/ProductionTool/tests/: README.md  test7090ProductionToolUninstallSmoke.ps1  testProductionToolInstallHelperSmoke.ps1
cpp/: CMakeLists.txt  HELLO_WORLD_BUILD_GUIDE.md  INSTALL.md  README.md  hello_world.cpp  lambda_vs_function.cpp  legacy_memory.cpp  modern_memory.cpp  opencv_sample.cpp  opencv_sample.hpp
cpp/lambda_vs_function/: README.md
cpp/memory_management/: README.md
(+241 files in other folders)
