[package]
name = "production_tool"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
dotenvy = "0.15.7"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
